--- a/client/src/shared/components/Navbar/Navbar.css
+++ b/client/src/shared/components/Navbar/Navbar.css
@@ -10,23 +10,25 @@
   height: auto;
   padding: 0;
   margin: auto;
-  width: 80%;
+  display: flex;
+  width: fit-content;
 }
 
-.NavbarList .row {
-  width: 100%;
+.NavbarList .tab {
+  width: 150px;
+  text-align: center;
   height: 50px;
+  font-size: 16px;
   list-style-type: none;
   margin-bottom: 5px;
-  display: flex;
-  flex-direction: row;
   color: #697a8d;
-  border-radius: 8px;
   justify-content: center;
   align-items: center;
+  margin: 10px;
+  padding: 10px;
 }
 
-.NavbarList .row:hover {
+.NavbarList .tab:hover {
   cursor: pointer;
   background-color: #d4d6da;
   transition: 0.4s;
@@ -34,23 +36,13 @@
 
 .NavbarList #active_menu {
   justify-content: center;
-  background-color: #ffdbdc;
+  border-bottom: 2px solid #b13137;
+  font-weight: bolder;
   color: #b13137;
-}
-
-.row #icon {
-  flex: 25%;
-  display: grid;
-  place-items: center;
-}
-
-.row #title {
-  flex: 75%;
 }
 
 @media screen and (max-width: 850px) {
   .Navbar {
-    display: none;
     margin: auto;
     width: 90%;
   }
