shared/table component resized

--- a/client/src/shared/components/Table/Table.css
+++ b/client/src/shared/components/Table/Table.css
@@ -7,8 +7,7 @@
   border-radius:3px;
   border-collapse: collapse;
   margin: auto;
-  max-width: 600px;
-  width: 600px;
+  width: 80%;
   padding:5px;
   animation: float 5s infinite;
 }
@@ -17,9 +16,9 @@ th {
   color:#D5DDE5;;
   background:#760006;
   border-right: 1px solid #e7e7e7;
-  font-size:16px;
+  font-size:15px;
   font-weight: 100;
-  padding:15px;
+  padding:10px;
   text-align:left;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   vertical-align:middle;
@@ -39,8 +38,9 @@ tr {
   border-top: 1px solid #C1C3D1;
   border-bottom: 1px solid #C1C3D1;
   color:#666B85;
-  font-size:16px;
+  font-size:13px;
   font-weight:normal;
+  text-align: center !important;  
   text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
 }
  
@@ -75,39 +75,17 @@ tr:last-child td:last-child {
 }
  
 td {
-  background:#FFFFFF;
-  padding:10px;
-  text-align:left;
-  vertical-align:middle;
-  font-size:14px;
-  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+  background: #FFFFFF;
+  margin: 5px;
+  padding: 8px;
+  width: fit-content;
+  text-align: center !important;
+  vertical-align: middle;
+  font-size: 13px;
+  text-shadow: -1px -1px 1px rgb(0 0 0 / 10%);
   border-right: 1px solid #C1C3D1;
 }
 
 td:last-child {
   border-right: 0px;
-}
-
-th.text-left {
-  text-align: left;
-}
-
-th.text-center {
-  text-align: center;
-}
-
-th.text-right {
-  text-align: right;
-}
-
-td.text-left {
-  text-align: left;
-}
-
-td.text-center {
-  text-align: center;
-}
-
-td.text-right {
-  text-align: right;
 }
