--- a/client/src/shared/components/MainContainer.css
+++ b/client/src/shared/components/MainContainer.css
@@ -14,9 +14,10 @@
 }
 
 
-@media screen and (max-width: 850px){
+@media screen and (max-width: 1040px){
     .main_container{
         width: 100%;
+        background-color: #ffffff;
     }
 
     .content{
