--- a/client/src/shared/components/CustomButton/CustomButton.css
+++ b/client/src/shared/components/CustomButton/CustomButton.css
@@ -15,3 +15,7 @@
 .btn-custom:hover{
     font-size: 15px;
 }
+
+.css-sghohy-MuiButtonBase-root-MuiButton-root {
+    position: inherit !important;
+}
