--- a/client/src/student/components/Profile/Profile.css
+++ b/client/src/student/components/Profile/Profile.css
@@ -18,6 +18,7 @@
 .contact-info{
     border-radius: 10px;
     border: 1px solid #cdcdcd;
+    background: linear-gradient(45deg, #fff9ec, white);
     padding: 20px;
     margin-right: 15px;
     margin-bottom: 20px;
